#55: add integration test task